# buildzr

./: CMakeLists.txt  zrcases
eigen/.hg/: dirstate
eigen/.hg/cache/: branch2-served
eigen/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
eigen/.hg/store/data/: _c_make_lists.txt.i  ~2ehgtags.i
eigen/.hg/store/data/_eigen/: _cholesky.i  _core.i  _eigenvalues.i  _k_l_u_support.i  _l_u.i  _pa_sti_x_support.i  _q_r.i  _qt_aligned_malloc.i  _s_v_d.i
eigen/.hg/store/data/bench/: _bench_timer.h.i
eigen/.hg/store/data/cmake/: _eigen_testing.cmake.i  _find_b_l_a_s.cmake.i  _find_b_l_a_s_e_x_t.cmake.i  _find_compute_cpp.cmake.i  _find_eigen3.cmake.i  _find_h_w_l_o_c.cmake.i  _find_k_l_u.cmake.i  _find_metis.cmake.i  _find_p_t_s_c_o_t_c_h.cmake.i  _find_pastix.cmake.i  _find_scotch.cmake.i  _find_tri_s_y_c_l.cmake.i
eigen/.hg/store/data/doc/: _ascii_quick_reference.txt.i  _c09___tutorial_sparse.dox.i  _preprocessor_directives.dox.i  _quick_reference.dox.i  (+3 more)
src/: #enki.cpp#  #main.cpp#  .#enki.cpp  .#main.cpp  atom.cpp  atom.cpp~  atom.h  atom.h~  crystal.cpp  crystal.cpp~  crystal.h  crystal.h~  csystem.cpp~  csystem.h  csystem.h~  enki.cpp  enki.cpp~  enki.h  haya.cpp  haya.cpp~  haya.h  haya.h~  lammpsfunctions.h  lammpsfunctions.h~  main.cpp  main.cpp~  mainkhater.cpp  mainkhater.cpp~  material.h  material.h~  oldcode.txt  testenki  testenki.cpp  testenki.cpp~  unitcell.cpp  unitcell.cpp~  unitcell.h  unitcell.h~
src/cells/: cu100.ucell  cu1m11.ucell  cuscrewloop112.crystal  fe100.ucell  fe111.ucell  zrbasal.ucell  zrprism.ucell
(+236 files in other folders)
